[tool.poetry]
name = "handson-dl"
version = "0.1.0"
description = "hands on deep learning tasks with modern methods"
authors = ["Mengman <corrsboy@gmail.com>"]
license = "MIT"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.2"
notebook = "^6.5.3"
torch = { url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp38-cp38-linux_x86_64.whl" }
lightning = "2.0.0"
timm = "^0.6.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
